エラーの修正3

--- a/src/app/todorist2/page.module.css
+++ b/src/app/todorist2/page.module.css
@@ -126,3 +126,11 @@
   white-space: nowrap;
   border: 0;
 }
+
+.inputFieldWrapper {
+  flex-grow: 1;
+}
+
+.alignButtonBottom {
+  align-self: flex-end;
+}
